patient record crud implemented

--- a/APIDotNetCore/APIDotNetCore/appsettings.json
+++ b/APIDotNetCore/APIDotNetCore/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=abdullah-test.coylekwtlogx.ap-southeast-1.rds.amazonaws.com;Port=5432;Database=assessmentdb;User Id=postgres;Password=B5yiUtPoTkhnGHXwrP10"
+    "DefaultConnection": "Server=AbdHsn-Laptop;Database=PatientChartGeneratorDB;User ID=AbdHsn-dbms; Password=123123;"
   },
     "AllowedHosts": "*"
   }
