--- a/APIDotNetCore/DataLayer/DataLayer.csproj
+++ b/APIDotNetCore/DataLayer/DataLayer.csproj
@@ -7,10 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <!--<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />-->
-	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
-	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
+
   </ItemGroup>
 
 </Project>
