--- a/APIDotNetCore/RepositoryLayer/RepositoryLayer.csproj
+++ b/APIDotNetCore/RepositoryLayer/RepositoryLayer.csproj
@@ -10,11 +10,9 @@
     <Folder Include="IRepositories\" />
     <Folder Include="Repositories\" />
 
-	  <!--<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />-->
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
 
-	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
-	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
 	  <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
