--- a/UIAngular/package.json
+++ b/UIAngular/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "ngx-bootstrap-navbar": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
