--- a/UIAngular/package.json
+++ b/UIAngular/package.json
@@ -23,7 +23,9 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "moment": "^2.29.3",
+    "ng2-charts": "^3.0.11",
     "ngx-bootstrap-navbar": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
