--- a/APIDotNetCore/APIDotNetCore/appsettings.json
+++ b/APIDotNetCore/APIDotNetCore/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=AbdHsn-Laptop;Database=PatientChartGeneratorDB;User ID=AbdHsn-dbms; Password=123123;"
-  },
+    "ConnectionStrings": {
+        // "DefaultConnection": "Server=AbdHsn-Laptop;Database=PatientChartGeneratorDB;User ID=AbdHsn-dbms; Password=123123;"
+        "DefaultConnection": "Server=.;Database=PatientChartGeneratorDB;Integrated Security=True"
+    },
     "AllowedHosts": "*"
   }
