--- a/APIDotNetCore/APIDotNetCore/appsettings.json
+++ b/APIDotNetCore/APIDotNetCore/appsettings.json
@@ -7,7 +7,7 @@
   },
     "ConnectionStrings": {
         // "DefaultConnection": "Server=AbdHsn-Laptop;Database=PatientChartGeneratorDB;User ID=AbdHsn-dbms; Password=123123;"
-        "DefaultConnection": "Server=.;Database=PatientChartGeneratorDB;Integrated Security=True"
+        "DefaultConnection": "Server=abdullah-mssql1.coylekwtlogx.ap-southeast-1.rds.amazonaws.com;Database=PatientChartGeneratorDB;User ID=admin; Password=ndOGyvRDpDW85NqKR4XH;"
     },
     "AllowedHosts": "*"
   }
